--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+.tag-pane-tag-self:before{
+    content: '';
+    position: absolute;
+    width: 100%; 
+    height: 100%; 
+    top: -6px;
+    left: -5px;
+    cursor: pointer;
+}
 .sr-flashcard-menu {
     display: block;
     width: 100%;
