--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-.tag-pane-tag-self:before{
-    content: '';
+.tag-pane-tag-self:before {
+    content: "";
     position: absolute;
-    width: 100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
     top: -6px;
     left: -5px;
     cursor: pointer;
