--- a/styles.css
+++ b/styles.css
@@ -131,17 +131,10 @@
     width: 100%;
 }
 
-.sr-modal-content {
-    position: relative;
-    height: 92%;
-    width: 100%;
-}
-
 #sr-flashcard-view {
     font-size: var(--font-text-size);
     overflow-y: auto;
-    height: 80%;
-    width: 100%;
+    height: 77%;
     user-select: text;
 }
 
@@ -157,7 +150,7 @@
 
     .sr-modal-content {
         width: 98% !important;
-        height: 90%;
+        /* height: 90%; */
     }
 
     #sr-context {
@@ -180,10 +173,7 @@
     .sr-flashcard-response,
     #sr-show-answer {
         width: 93.5% !important;
-        /* line-height: 60px; */
-        left: 0;
-        right: 0;
-        margin: auto;
+        line-height: 60px;
     }
 
     .ResponseFloatBarCommandItem,
@@ -241,7 +231,7 @@ ResponseFloatBar TOOLBAR
     /* flex-direction: row; */
     left: 0;
     right: 0;
-    bottom: 12%;
+    bottom: 0%;
     margin: auto;
     align-items: center;
     transition: 200ms ease;
@@ -258,10 +248,6 @@ ResponseFloatBar TOOLBAR
     position: relative;
 }
 
-.ResponseFloatBarCommandItem:before {
-    position: relative;
-}
-
 .ResponseFloatBarCommandItem {
     border: none;
     display: flex;
@@ -271,6 +257,8 @@ ResponseFloatBar TOOLBAR
     width: 90%;
     height: 48px;
     box-shadow: none;
+    left: 0;
+    right: 0;
     margin-left: 3px;
     margin-right: 3px;
     margin: auto;
