--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ ResponseFloatBar TOOLBAR
     /* flex-direction: row; */
     left: 0;
     right: 0;
-    bottom: 0%;
+    bottom: 5%;
     margin: auto;
     align-items: center;
     transition: 200ms ease;
@@ -240,30 +240,28 @@ ResponseFloatBar TOOLBAR
     z-index: var(--layer-status-bar);
     box-shadow: 0px 3px 32px rgba(37, 49, 224, 0.15);
     border: 1px solid var(--background-modifier-border);
-    background: rgb(255 255 255 / 90%);
+    background: var(--background-primary-alt);
 }
 
 .sr-show-response {
     height: 48px;
     position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .ResponseFloatBarCommandItem {
     border: none;
-    display: flex;
     cursor: pointer;
     padding: 5px 6px;
     min-width: 10px;
     width: 90%;
     height: 48px;
     box-shadow: none;
-    left: 0;
-    right: 0;
-    margin-left: 3px;
-    margin-right: 3px;
     margin: auto;
     position: relative;
-    flex-direction: row;
+
     border-radius: 3px;
     font-size: initial !important;
     --background-secondary: var(--background-primary-alt);
